vertical alignment fix on status messages.

--- a/src/css/less/rt.less
+++ b/src/css/less/rt.less
@@ -102,7 +102,9 @@ raintank BOX
 .checkType {width:70px; display:inline-block;}
 
 .status {margin-left:10px; 
-  vertical-align:text-bottom;
+  vertical-align:bottom;
+  position: relative;
+  bottom: 10px !important;
 }
 
 .statusMsg {padding-left:5px;}
